fixed overflows

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,12 +13,13 @@
  */
 
 body
-	padding-top: 50px
-	padding-bottom: 50px
 	p
 		margin-top: 20px
 		font-size:  125%
 		line-height: 30px
+	.content
+		margin-top: 80px
+		margin-bottom: 80px
 
 	footer
 		background-color: white
